Modified now/next title position to avoid overflow issues

--- a/CSS/infobar.css
+++ b/CSS/infobar.css
@@ -76,9 +76,9 @@ z-index: 310;
 {
 	font-size: 20pt;
 	top: 00px;
-	height: 80px;
-	padding-left: 20px;
-	padding-top: 20px;
+	height: 90px;
+	padding-left: 10px;
+	padding-top: 10px;
 	background-color: #222222;
 	border-bottom: 1px solid #111111;
 }
@@ -110,9 +110,9 @@ z-index: 310;
 {
 	font-size: 20pt;
 	top: 00px;
-	height: 80px;
-	padding-left: 20px;
-	padding-top: 20px;
+	height: 90px;
+	padding-left: 10px;
+	padding-top: 10px;
 	background-color: #222222;
 	border-bottom: 1px solid #111111;
 }
